syntax = "proto3";

package second.protos;

import "second/protos/optimizer.proto";

message TrainConfig{
    Optimizer optimizer = 1;
    uint32 steps = 2;
    uint32 steps_per_eval = 3;
    uint32 steps_per_save = 4;
    uint32 save_checkpoints_secs = 5;
    uint32 save_summary_steps = 6;
    bool enable_mixed_precision = 7;
    float loss_scale_factor = 8;
    bool clear_metrics_every_epoch = 9;
    bool cum_lc_training = 10;
}